Reset sources for azure-communication-phonenumbers to the release version 1.1.11.